--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/JasonSuMY/INFO30005_Dream_Taste#readme",
   "dependencies": {
     "eslint": "^5.16.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.5.0",
+    "nodemon": "^1.18.11"
   }
 }
