--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "body-parser": "^1.18.3",
     "eslint": "^5.16.0",
     "express": "^4.16.4",
-    "mongoose": "^5.5.0",
+    "mongoose": "^5.5.2",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.11"
   }
 }
