--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.5.2",
     "multer": "^1.4.1",
-    "nodemon": "^1.18.11"
+    "nodemon": "^1.18.11",
+    "pug": "^2.0.3"
   }
 }
