--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   "dependencies": {
     "GridFS": "^0.3.0",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.14.0",
     "eslint": "^5.16.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.2",
     "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "nodemon": "^1.19.0",
     "pug": "^2.0.3"
   }
