--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
   "homepage": "https://github.com/JasonSuMY/INFO30005_Dream_Taste#readme",
   "dependencies": {
     "GridFS": "^0.3.0",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.14.0",
+    "cookie-parser": "^1.4.4",
     "eslint": "^5.16.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "mongoose": "^5.5.2",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
