--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.14.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "eslint": "^5.16.0",
     "express": "^4.16.4",
