--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^5.5.2",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
+    "node-schedule": "^1.3.2",
     "nodemon": "^1.19.0",
     "pug": "^2.0.3"
   }
