Improve security of the project
Move database credentials from the source code to local env file

--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
   },
   "homepage": "https://github.com/JasonSuMY/INFO30005_Dream_Taste#readme",
   "dependencies": {
-    "GridFS": "^0.3.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.14.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^16.0.1",
     "eslint": "^5.16.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "GridFS": "^0.3.0",
     "mongoose": "^5.7.5",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
